# FaceId

./: .gitignore  CMakeLists.txt  LICENSE  README.md
deb_template/DEBIAN/: control  postinst  postrm
libs/: CMakeLists.txt
libs/common/: CMakeLists.txt
libs/common/src/: AutoBuffer.cpp  AutoBuffer.hpp  base64.hpp  byte_order.cpp  byte_order.hpp  csv.cpp  csv.hpp  date_util.cpp  date_util.hpp  util.cpp  util.hpp
libs/include/: noncopyable.hpp  result.hpp  spdlog_common.hpp
libs/recognizer/: CMakeLists.txt
libs/recognizer/src/: FeatureEngine.cpp  FeatureEngine.hpp
libs/storage/: CMakeLists.txt
libs/storage/src/: Storage.cpp  Storage.hpp  app_file.cpp  app_file.hpp  application.cpp  application.hpp  application_orm.cpp  application_orm.hpp  config.hpp  face_record.cpp  face_record.hpp  face_record_orm.cpp  face_record_orm.hpp  feature_file.cpp  feature_file.hpp  feature_file_header.h  user.cpp  user.hpp  user_feature_index_file.cpp  user_feature_index_file.hpp
libs/storage/src/orm/: application_orm.cpp  application_orm.hpp  face_record_orm.cpp  face_record_orm.hpp  user_orm.cpp  user_orm.hpp
modules/: CMakeLists.txt
modules/common/: CMakeLists.txt
modules/common/src/: AutoBuffer.hpp  base64.cpp  base64.hpp  result.hpp
modules/include/: common.hpp
modules/recognizer/: CMakeLists.txt
modules/recognizer/src/: FeatureEngine.cpp  FeatureEngine.hpp  FeatureEnginePool.cpp  FeatureEnginePool.hpp  config.hpp
modules/server/: CMakeLists.txt  config.yaml.in  face_id_server.service.in  version.hpp.in
modules/server/src/: SimilarityCalculator.cpp  handler.cpp  handler.hpp  main.cpp  server_context.cpp  server_context.hpp
modules/storage/: CMakeLists.txt
modules/storage/src/: Storage.cpp  Storage.hpp  config.hpp  face_record.cpp  face_record.hpp  feature_file.cpp  feature_file.hpp  feature_user_index_file.cpp  feature_user_index_file.hpp
patch/: pot.h.patch  tennis_macos.patch  wcdb_v2.0.4.patch
script/: build_deb.sh  build_libhv.sh  build_libopencv.sh  build_libseetaface.sh  build_libwcdb.sh  build_libwcdb_macos.sh  build_libyam-cpp.sh  download_libopencv.sh  download_libseetaface.sh  download_libwcdb.sh  download_libyam-cpp.sh
tools/: CMakeLists.txt  config.yaml.in
tools/cli/: CMakeLists.txt  version.hpp.in
tools/cli/src/: config.hpp  main.cpp
tools/server/: CMakeLists.txt  config.yaml.in  face_id_server.service.in  service_stop.sh  version.hpp.in
tools/server/src/: SimilarityCalculator.cpp  SimilarityCalculator.hpp  config.hpp  handler.cpp  handler.hpp  image_downloader.cpp  image_downloader.hpp  main.cpp  router.cpp  router.hpp  server_context.cpp  server_context.hpp
tools/server/src/handler/: application_handler.cpp  application_handler.hpp  common_handler.cpp  common_handler.hpp  face_handler.cpp  face_handler.hpp  face_req_params.cpp  face_req_params.hpp  nlohmann_json_reponse_provide.cpp  nlohmann_json_reponse_provide.hpp  user_handler.cpp  user_handler.hpp
